// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayTable should render a ClayTable not using default classes 1`] = `
<div class="">
  <table class="">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with a basic schema and grouped items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th>Origin</th>
      </tr>
    </thead>
    <tbody>
      <tr class="table-divider" id="group-0">
        <td colspan="2">Folders</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Photos</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate"></span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Videos</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate"></span>
        </td>
      </tr>
      <tr class="table-divider" id="group-1">
        <td colspan="2">Recipes</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">U.S.A</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">China</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Spain</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Italy</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Toledo</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Mexico</span>
        </td>
      </tr>
      <tr class="table-divider" id="group-2">
        <td colspan="2">Chefs</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ferrán Adriá</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate"></span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Gordon Ramsay</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate"></span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Alberto Chicote</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate"></span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with a basic schema and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th>Origin</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">U.S.A</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">China</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Spain</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Italy</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Toledo</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Mexico</span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with a basic schema and items and add a class on row focus 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">
          <button class="btn btn-unstyled" type="button">Name</button>
        </th>
        <th>Origin</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">U.S.A</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">China</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Spain</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Italy</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Toledo</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="text-truncate">Mexico</span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with a basic schema and no items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th>Origin</th>
      </tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with a basic schema with sortable fields and no items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">
          <button class="btn btn-unstyled" type="button">Name
            <span class="inline-item inline-item-after">
              <span aria-label="icon-order-arrow-up" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow-up" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#order-arrow-up"></use>
                </svg>
              </span>
            </span>
          </button>
        </th>
        <th>Origin</th>
      </tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with button field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th>Download</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td>
          <button class="btn btn-sm btn-secondary" type="button">Download</button>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td>
          <button class="btn btn-sm btn-secondary" type="button">Download</button>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td>
          <button class="btn btn-sm btn-secondary" type="button">Download</button>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td>
          <button class="btn btn-sm btn-secondary" type="button">Download</button>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td>
          <button class="btn btn-sm btn-secondary" type="button">Download</button>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td>
          <button class="btn btn-sm btn-secondary" type="button">Download</button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with label field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th>SpicyLevel</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-secondary">
            <span class="label-item label-item-expand">No Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-secondary">
            <span class="label-item label-item-expand">Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-secondary">
            <span class="label-item label-item-expand">No Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-secondary">
            <span class="label-item label-item-expand">No Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-secondary">
            <span class="label-item label-item-expand">Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-secondary">
            <span class="label-item label-item-expand">Very Spicy</span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with label field with styles map and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th>SpicyLevel</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-success">
            <span class="label-item label-item-expand">No Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-warning">
            <span class="label-item label-item-expand">Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-success">
            <span class="label-item label-item-expand">No Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-success">
            <span class="label-item label-item-expand">No Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-warning">
            <span class="label-item label-item-expand">Spicy</span>
          </span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td>
          <span class="label label-danger">
            <span class="label-item label-item-expand">Very Spicy</span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with link field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th>Origin</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td>
          <a class=" text-truncate" href="#">U.S.A</a>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td>
          <a class=" text-truncate" href="#">China</a>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td>
          <a class=" text-truncate" href="#">Spain</a>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td>
          <a class=" text-truncate" href="#">Italy</a>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td>
          <a class=" text-truncate" href="#">Toledo</a>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td>
          <a class=" text-truncate" href="#">Mexico</a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with number field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th>Time</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td class="text-right">10 min.</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td class="text-right">90 min.</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td class="text-right">90 min.</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td class="text-right">30 min.</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td class="text-right">50 min.</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td class="text-right">30 min.</td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with progress bar field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th>Difficulty</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="progress-group progress-info">
            <div class="progress">
              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="2" class="progress-bar" role="progressbar" style="width: 2%;"></div>
            </div>
            <div class="progress-group-addon">2%</div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="progress-group progress-info">
            <div class="progress">
              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="8" class="progress-bar" role="progressbar" style="width: 8%;"></div>
            </div>
            <div class="progress-group-addon">8%</div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="progress-group progress-info">
            <div class="progress">
              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="9" class="progress-bar" role="progressbar" style="width: 9%;"></div>
            </div>
            <div class="progress-group-addon">9%</div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="progress-group progress-info">
            <div class="progress">
              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="6" class="progress-bar" role="progressbar" style="width: 6%;"></div>
            </div>
            <div class="progress-group-addon">6%</div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="progress-group progress-info">
            <div class="progress">
              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="5" class="progress-bar" role="progressbar" style="width: 5%;"></div>
            </div>
            <div class="progress-group-addon">5%</div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="progress-group progress-info">
            <div class="progress">
              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="5" class="progress-bar" role="progressbar" style="width: 5%;"></div>
            </div>
            <div class="progress-group-addon">5%</div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema, items and action menu 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th></th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Photos</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="quick-action-menu"></div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
              <span aria-label="icon-ellipsis-v" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Videos</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="quick-action-menu"></div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
              <span aria-label="icon-ellipsis-v" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema, items and action menu with quick action items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Name</th>
        <th></th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="quick-action-menu">
            <a aria-label="Remove" class=" component-action quick-action-item" href="#1">
              <span aria-label="icon-trash" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
                </svg>
              </span>
            </a>
            <a aria-label="Download" class=" component-action quick-action-item" href="#2">
              <span aria-label="icon-download" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
                </svg>
              </span>
            </a>
          </div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
              <span aria-label="icon-ellipsis-v" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="quick-action-menu">
            <a aria-label="Remove" class=" component-action quick-action-item" href="#1">
              <span aria-label="icon-trash" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
                </svg>
              </span>
            </a>
            <a aria-label="Download" class=" component-action quick-action-item" href="#2">
              <span aria-label="icon-download" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
                </svg>
              </span>
            </a>
          </div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
              <span aria-label="icon-ellipsis-v" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="quick-action-menu">
            <a aria-label="Remove" class=" component-action quick-action-item" href="#1">
              <span aria-label="icon-trash" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
                </svg>
              </span>
            </a>
            <a aria-label="Download" class=" component-action quick-action-item" href="#2">
              <span aria-label="icon-download" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
                </svg>
              </span>
            </a>
          </div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
              <span aria-label="icon-ellipsis-v" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="quick-action-menu">
            <a aria-label="Remove" class=" component-action quick-action-item" href="#1">
              <span aria-label="icon-trash" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
                </svg>
              </span>
            </a>
            <a aria-label="Download" class=" component-action quick-action-item" href="#2">
              <span aria-label="icon-download" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
                </svg>
              </span>
            </a>
          </div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
              <span aria-label="icon-ellipsis-v" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="quick-action-menu">
            <a aria-label="Remove" class=" component-action quick-action-item" href="#1">
              <span aria-label="icon-trash" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
                </svg>
              </span>
            </a>
            <a aria-label="Download" class=" component-action quick-action-item" href="#2">
              <span aria-label="icon-download" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
                </svg>
              </span>
            </a>
          </div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
              <span aria-label="icon-ellipsis-v" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
        <td>
          <div class="quick-action-menu">
            <a aria-label="Remove" class=" component-action quick-action-item" href="#1">
              <span aria-label="icon-trash" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
                </svg>
              </span>
            </a>
            <a aria-label="Download" class=" component-action quick-action-item" href="#2">
              <span aria-label="icon-download" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
                </svg>
              </span>
            </a>
          </div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
              <span aria-label="icon-ellipsis-v" class="lexicon-icon-container" role="img">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
                  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
`;

exports[`ClayTable should render a ClayTable with classes 1`] = `
<div class="table-responsive my-custom-class">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with classes not using default classes 1`] = `
<div class=" my-custom-class">
  <table class="">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with id 1`] = `
<div class="table-responsive" id="myId">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with size \`lg\` 1`] = `
<div class="table-responsive-lg">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with size \`md\` 1`] = `
<div class="table-responsive-md">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with size \`sm\` 1`] = `
<div class="table-responsive-sm">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with size \`xl\` 1`] = `
<div class="table-responsive-xl">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with table classes 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover my-custom-table-class">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a selectable ClayTable with an schema and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th></th>
        <th class="table-cell-expand">Name</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" name="recipe" value="3" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">deselect</span>
              </span>
            </label>
          </div>
        </td>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Hamburger</span>
            </span>
          </h1>
        </td>
      </tr>
      <tr>
        <td>
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" name="recipe" value="4" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">deselect</span>
              </span>
            </label>
          </div>
        </td>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Ramen</span>
            </span>
          </h1>
        </td>
      </tr>
      <tr>
        <td>
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" name="recipe" value="5" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">deselect</span>
              </span>
            </label>
          </div>
        </td>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Paella</span>
            </span>
          </h1>
        </td>
      </tr>
      <tr>
        <td>
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" name="recipe" value="6" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">deselect</span>
              </span>
            </label>
          </div>
        </td>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Pizza</span>
            </span>
          </h1>
        </td>
      </tr>
      <tr>
        <td>
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" name="recipe" value="7" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">deselect</span>
              </span>
            </label>
          </div>
        </td>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Carcamusas</span>
            </span>
          </h1>
        </td>
      </tr>
      <tr>
        <td>
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" name="recipe" value="8" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">deselect</span>
              </span>
            </label>
          </div>
        </td>
        <td class="table-cell-expand">
          <h1 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Tacos</span>
            </span>
          </h1>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a wrapped ClayTable 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a wrapped ClayTable not using default classes 1`] = `
<div class="">
  <table class="">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a wrapped ClayTable with classes 1`] = `
<div class="table-responsive my-custom-class">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a wrapped ClayTable with classes not using default classes 1`] = `
<div class=" my-custom-class">
  <table class="">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render the default markup 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;
